# arc-experiments

./: .gitignore  BruteForce.ipynb  BruteForce2.ipynb  Evaluator.hs  Grammar.ipynb  MCTS.ipynb  MCTSGrammar.ipynb  Tagless.hs  connect4.ipynb  experiment1.txt  pyproject.toml
ARCLean/: ARCLean.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
arc/: load_data.py  utils.py
arc/arc_search/: __init__.py  _brute1.py  _grammar.py  _mcts.py  _search.py  search.py
autodidax/: autodidax.ipynb  autodidax.py
src/arc_experiments/: __init__.py
