[project]
name = "arc-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "hypothesis>=6.123.8",
    "pyrsistent>=0.20.0",
    "jax>=0.4.38",
    "chex>=0.1.88",
    "rich>=13.9.4",
    "mctx>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
